--- a/js-users/2nd-assessment/package.json
+++ b/js-users/2nd-assessment/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "jquery": "^3.6.0",
+    "react": "^16.3.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-dom": "^16.3.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
